[tool.poetry]
name = "kyutils"
version = "0.1.0"
description = "kyu's utils"
authors = ["Kyu Hyun Lee <kyuhyun9056@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
spikeinterface
probeinterface

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
